Fixed overflow

--- a/Final-Project/Overwatch-Counter-Picker/style.css
+++ b/Final-Project/Overwatch-Counter-Picker/style.css
@@ -8,19 +8,10 @@
     background: rgb(46,220,255);
     background: linear-gradient(0deg, rgba(46,220,255,1) 0%, rgba(110,110,255,1) 100%);
     width: 100%;
-    height: 1440px;
-    overflow-x: hidden;
+    height: fit-content;
+    overflow-x: auto;
+    
 }
-.hero-card{
-    width: 6em;
-    height: 8.75em;
-    background-color: white;
-    text-align: center;
-    padding:1px;
-    text-align: center;
-    margin: 5px 2.5px 5px 2.5px;
-}
-
 .hero-img{
     width: 7em;
     background-color: rgb(200, 221, 248);
@@ -60,11 +51,12 @@
 .counter{
     font-size: 1.5em;
     margin-bottom: 1em;
-    margin-right: 1em;
+    margin-right: 5em;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     height:25em;
+    overflow:visible;
 }
 .counter-column{
     margin-right: 2em;
